#67 fix calendar topIndex month does not fit

--- a/css/material-datetimepicker.css
+++ b/css/material-datetimepicker.css
@@ -137,7 +137,7 @@ md-menu-content.dtp-year-list {
 }
 
 .dtp div.dtp-picker-month, .dtp div.dtp-actual-time {
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: 500;
     text-align: center;
 }
@@ -164,7 +164,7 @@ md-menu-content.dtp-year-list {
 
 .dtp table.dtp-picker-days {
     margin: 0;
-    min-height: 220px;
+    min-height: 260px;
 }
 
 .dtp md-virtual-repeat-container.months {
@@ -176,7 +176,7 @@ md-menu-content.dtp-year-list {
 }
 
 .dtp table.dtp-picker-days tr > td {
-    font-size: 11px;
+    font-size: 12px;
     text-align: center;
     padding: 0;
 }
@@ -229,7 +229,7 @@ md-menu-content.dtp-year-list {
     color: #757575;
     text-align: center;
     font-weight: 700;
-    padding: 4px 3px;
+    padding: 2px 3px;
     width: 38px;
     height: 28px;
 }
